--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -102,6 +102,7 @@
 								<div class="container-ajouter-fichier">
 									<input type="file" accept=".jpg, .png" max-size="4000000" name="image" id="ajouter-fichier">
 									<div class="labelP">
+									<i class="fa-regular fa-image" style="color: #8fa3c7;" id="addIcon"></i>
 									<label for="ajouter-fichier" id="ajouter-fichier">+ Ajouter photo</label>
 									<p>jpg, png : 4Mo max</p>
 									</div>
